Fri Sep 30 01:56:17 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* filestack.h (PObject::lastLineSize): Added.
	* filestack.c (FS_GetLine): Update PObject::lastLineSize.
	(FS_PushFilePObject): Initialise PObject::lastLineSize.
	* macros.c (Macro_GetLine): Update PObject::lastLineSize.
	(FS_PushMacroPObject): Initialise PObject::lastLineSize.
	* whileif.c (if_skip, while_skip): Rename to If_Skip, While_Skip.
	(While_Unwind): Remove.
	(While_ReEvalAndDo): Renamed to While_Rewind.
	(c_while, While_Rewind, c_wend, FS_PopIfWhile): Reparse WHILE input
	line before re-evaluation.
	* regression/tests_pass/while.s: Added test case.
	* input.c (inputThisInstead): Rename to Input_ThisInstead.

Thu Sep 29 22:01:10 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* local.c (Local_ROUTLblNo): Support up to 1000 local labels.
	* local.h (Local_ROUTLblNo): Likewise.
	* lex.c (Lex_ReadLocalLabel): Likewise.
	* variables.c (varPos): Rename to VarPos.
	(varPos::symptr): Rename to VarPos::symbolP.
	(varPos::symbol): Rename to VarPos::symbol.
	(var_restoreLocals): Rename to Var_RestoreLocals.
	(var_define): Rename to Var_Define.
	* variables.h: Likewise.
	* macros.c, macro.h: Follow variables.c/variables.h renames.
	* main.c: Likewise.

Thu Sep 29 21:21:50 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* lexAcorn.c (lexAcornUnop, lexAcornBinop): Avoid inputUnGet error on
	unknown operations.

Tue Sep 27 23:42:27 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* code.c (Code_ExpandCurrAreaSymbolAsOffset): Disabled.
	* eval.c (GetInt): Added.
	(evalBinop): Extend Op_mul, Op_div, Op_mod, Op_add, Op_sub, Op_and,
	Op_or, Op_xor with support for one character long strings.
	Simplified Op_asr, Op_sr, Op_sl, Op_ror, Op_rol by using GetInt.
	Add restrict.
	* eval.h (evalBinOp): Add restrict.
	* regression/tests_pass/operator_multiplication.s: Enhanced.
	* regression/tests_pass/operator_addition_logical.s: Likewise.
	* Makefile.am (asasm_CFLAGS): Add -fstrict-aliasing -Wstrict-aliasing.
