@@ -1,3 +1,10 @@
+Mon Oct  3 21:45:10 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+  
+	* macros.h (MACRO_ARG_LIMIT): Increased to 18.
+	(MACRO_ARG0): Changed from 16 to 14.
+	(MACRO_ARG15): Removed.
+	* macros.C (Macro_GetLine): Follow MACRO_ARG15 removal.
+
 Fri Sep 30 01:56:17 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* filestack.h (PObject::lastLineSize): Added.
